--- a/mobile.css
+++ b/mobile.css
@@ -11,16 +11,107 @@ html, body {
     
 }
 
+/* Иконка бургера для мобильного меню */
+
+.burger-icon {
+    width: 45px;
+    height: 45px;
+    /* border: 1px solid black; */
+    margin: auto;
+    position: relative;
+    cursor: pointer;
+}
+
+.black-line {
+    background-color: #FF9900;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    width: 100%;
+    height: 5px;
+}
+
+.first-line {
+    top: 0;
+}
+
+.second-line,
+.third-line {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.third-line {
+    box-shadow: none;
+}
+
+.fourth-line {
+    bottom: 0;
+}
+
+.burger-onclick .second-line {
+    transform: translateY(-50%) rotate(45deg);
+    transition: 0.3s all linear;
+}
+
+.burger-onclick .third-line {
+    transform: translateY(-50%) rotate(-45deg);
+    transition: 0.3s all linear;
+}
+
+.burger-onclick .first-line,
+.burger-onclick .fourth-line {
+    opacity: 0;
+    transition: 0.3s all linear;
+}
+
+/* Раскрывающийся список меню */
+
+.burger-menu {
+    position: absolute;
+    list-style-type: none;
+    width: 200px;
+    font-size: 0px;
+    max-height: 0px;
+    overflow: hidden;
+    color: #2F281E;
+    top: 100%;
+    /* transform: translateY(100%); */
+}
+
+.burger-menu li {
+    padding: 20px 0;
+    background-color: #FF9900;
+    text-align: center;
+    border: 1px solid black;
+
+}
+
+.burger-active {
+    font-family: Poppins, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px;
+    letter-spacing: 0px;
+    color: #2F281E;
+    max-height: 500px;
+    transition: 600ms all linear;
+}
+
+/* сокрытие элеметов для ПК */
+
 .visually-hidden {
     display: none;
 }
 
+/* Обложка верхнего блока - лого + навигация + кнопки */
+
 .header-wraper {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto 1fr auto;
     grid-auto-rows: minmax(78px, auto);
     max-width: 1400px;
-    margin: 20px auto 0px;
+    margin: 0 auto 0;
 }
 
 .logo-group {
@@ -35,8 +126,6 @@ html, body {
 }
 
 .top-menu ul{
-    display: flex;
-    flex-wrap: nowrap;
     list-style-type: none;
     padding: 0;
     
@@ -56,15 +145,21 @@ html, body {
 }
 
 .top-menu {
+    position: relative;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding-right: 90px;
+    /* align-items: center; */
+    justify-content: center;
+    padding: 0;
     margin: auto 0px auto 0px;
 }
 
 .top-menu button {
     margin-right: 14px;
+}
+
+.user-navigation {
+    align-self: center;
+    padding: 0 90px 0 0;
 }
 
 .sign-in {
