--- a/mobile.css
+++ b/mobile.css
@@ -75,27 +75,31 @@ html, body {
     overflow: hidden;
     color: #2F281E;
     top: 100%;
+    opacity: 0;
     /* transform: translateY(100%); */
 }
 
 .burger-menu li {
-    padding: 20px 0;
+    padding: 30px 0;
     background-color: #FF9900;
     text-align: center;
-    border: 1px solid black;
+    border-bottom: 2px solid #FFFFFF;
+    border-top: 2px solid #FFFFFF;
+    opacity: 1;
 
 }
 
 .burger-active {
     font-family: Poppins, sans-serif;
-    font-size: 14px;
+    font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: 28px;
     letter-spacing: 0px;
     color: #2F281E;
     max-height: 500px;
-    transition: 600ms all linear;
+    transition: 400ms all linear;
+    opacity: 1;
 }
 
 /* сокрытие элеметов для ПК */
