--- a/mobile.css
+++ b/mobile.css
@@ -464,10 +464,10 @@ html, body {
 }
 
 .professionals b {
-    color: #2F281E;
+    color: #141310;
     font-size: 16px;
     font-weight: 700;
-    line-height: 26px;
+    line-height: 56px;
 }
 
 .professionals h2 {
@@ -578,6 +578,13 @@ html, body {
     line-height: 54px;
 }
 
+.marketers b {
+    color: #141310;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 56px;
+}
+
 .marketers {
     color: #544837;
     font-size: 16px;
@@ -670,7 +677,7 @@ html, body {
 }
 
 .avatar-wrapper-2 p {
-    right: 120px;
+    right: 115px;
 }
 
 .avatar-wrapper-3 p {
@@ -819,7 +826,7 @@ html, body {
     color: #2F281E;
     font-size: 34px;
     font-weight: 700;
-    line-height: 51px;
+    line-height: 100px;
     margin: 0;
 }
 
